--- a/pom.xml
+++ b/pom.xml
@@ -126,5 +126,11 @@
             <scope>system</scope>
             <systemPath>${basedir}/libs/GameAPI.jar</systemPath>
         </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 </project>
